syntax = "proto3";
package zetachain.zetacore.crosschain;

import "gogoproto/gogo.proto";
import "pkg/coin/coin.proto";

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

// ZRC20Rate defines the conversion rate of ZRC20 to ZETA
message ZRC20Rate {
  int64 chain_id = 1;
  coin.CoinType coin_type = 2;
  string asset = 3;
  double conversion_rate = 4;
}

// RateLimiterFlags defines the outbound rate limiter flags
message RateLimiterFlags {
  bool is_enabled = 1;
  int64 rate_limit_window = 2;
  string rate_limit_in_zeta = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  repeated ZRC20Rate zrc20_rates = 4;
}
