syntax = "proto3";
package lightclient;

option go_package = "github.com/zeta-chain/zetacore/x/lightclient/types";

// VerificationFlags is a structure containing information which chain types are enabled for block header verification
message VerificationFlags {
  bool ethTypeChainEnabled = 1;
  bool btcTypeChainEnabled = 2;
}
